fix align

--- a/css/org-wiki.css
+++ b/css/org-wiki.css
@@ -1,3 +1,8 @@
+
+html{
+    padding-bottom: 100vh;
+}
+
 .wiki-page h1, .wiki-page .h1-content,
 .wiki-page h2, .wiki-page .h2-content,
 .wiki-page h3, .wiki-page .h3-content,
@@ -31,11 +36,12 @@
     font-weight: bold;
 }
 
-html{
-    padding-bottom: 100vh;
-}
 
 .wiki-page pre{
     margin-top: 0;
     margin-bottom: 0;
+}
+
+#tools{
+    text-align: right;
 }
